<resources>
    <string name="app_name">Kicau Mania</string>

    <string name="greetings_onboarding">Halo selamat datang\nKicau Mania</string>
    <string name="greetings_description_onboarding">Makasih udah pakai aplikasi dari Kelompok kami, Aplikasi ini dibuat untuk memenuhi tugas Kecerdasan Buatan</string>

    <string name="greetings_home_1">Find and Sell Your</string>
    <string name="greetings_home_2">Dream Bird Here</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_account">Sudah mempunyai Akun?</string>
    <string name="create_new_account">Create an new account?</string>
    <string name="lupa_kata_sandi">Lupa kata sandi</string>

    <!--Login & Register-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_description_greetings">Gunakan username, email dan password dengan benar ya, Password maksimal 6 karakter dan username 10 karakter</string>
    <string name="login_description_greetings">Selamat datang kembali, Gunakan username dan password dengan benar ya, maaf kalau ada BUG hehe</string>
    <string name="register_greetings">Membuat Akun</string>
    <string name="login_greetings">Welcome Back!</string>

    <!---Home Menu-->
    <string name="smart_camera">Kamera Pintar</string>
    <string name="jual">Jual</string>
    <string name="beli">Beli</string>
    <string name="lomba">Lomba</string>

    <!--Bottom Navigation Item-->
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="setting">Setting</string>

    <string name="bird_item_heading">BURUNG POPULER</string>

    <string-array name="bird_item_title">
        <item name="bird_title_1">Parkit</item>
        <item name="bird_title_2">Lovebird</item>
        <item name="bird_title_3">Kenari Atlantik</item>
        <item name="bird_title_4">Cockatiel</item>
        <item name="bird_title_5">Merpati Balap / Japati</item>
        <item name="bird_title_6">Nuri</item>
        <item name="bird_title_7">Condet</item>
        <item name="bird_title_8">Muray</item>
        <item name="bird_title_9">Merpati Hitam</item>
        <item name="bird_title_10">Burung Parsha</item>
    </string-array>

    <string-array name="bird_item_category">
        <item name="bird_category_1">Burung Hias</item>
        <item name="bird_category_2">Burung Kicau</item>
        <item name="bird_category_3">Burung Kicau</item>
        <item name="bird_category_4">Burung Hias</item>
        <item name="bird_category_5">Burung Lomba</item>
        <item name="bird_category_6">Burung Hias</item>
        <item name="bird_category_7">Burung Kicau</item>
        <item name="bird_category_8">Burung Kicau</item>
        <item name="bird_category_9">Burung Lomba</item>
        <item name="bird_category_10">Burung Mage</item>
    </string-array>

    <string name="camera_title_find_manuk">Cari Manuk</string>

</resources>